# Mnema

./: .env.example  .gitignore  README.md  pyproject.toml  v4-plan.md  v5-plan.md  v6-plan.md
scripts/: fix_mojibake.py  perf_baseline.py
src/mnema_memory/: cli.py  config.py  db.py  embeddings.py  fileio.py  hnsw_index.py  ids.py  mcp.py  renderer.py  schemas.py  server.py  service.py  summarizer.py  vector_index.py
src/mnema_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_concurrency.py  test_db_migration.py  test_dedup.py  test_dotenv.py  test_failures.py  test_forget.py  test_hnsw_index.py  test_local_config.py  test_local_migration.py  test_local_provider.py  test_mcp_server.py  test_memory_service.py  test_openai_provider.py  test_summarize.py  test_summary_generators.py  test_units.py  test_v6_retention_ranking.py  test_vault_structure.py  test_vector_index.py
