[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnema-memory"
version = "0.1.0"
description = "Obsidian-backed memory backend for agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.35.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
mnema-memory = "mnema_memory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
