[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnema-memory"
version = "0.1.0"
description = "Obsidian-backed memory backend for agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
openai = ["openai>=1.35.0"]
anthropic = ["anthropic>=0.40"]
local = ["sentence-transformers>=3.0"]
ann = ["hnswlib>=0.8.0"]
test = ["pytest>=8.0.0", "hnswlib>=0.8.0"]

[project.scripts]
mnema-memory = "mnema_memory.cli:main"
mnema-memory-mcp = "mnema_memory.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
